v0.12
	* ADD : scalable POI icons in styles
	* ADD : +/- buttons on zooming slippy map so single button devices can use it too
	* FIX : only activate upload menu when there is something to upload
	* ADD : ability to use svg for node icons
	* ADD : tab filtering and color code to Layer dock
	* FIX : manage road conflicts from downloads
	* ADD : continue road if selected node belongs to only 1 road and is at one end
	* ADD : MRU for opened and imported files
	* ADD : menu option to show/hide a selectable relation bounding box
	* ADD : preference option for focus/hover/relations colors
	* ADD : Create one layer per track during GPX import
	* ADD : Info dock for layers
	* ADD : menu option to show/hide scale
	* ADD : "Duplicate", "Apply", "Up", "Down" functionality to the style editor
	* FIX : another try at solving the "long-ways-at-high-zoom-makes-Merkaartor-unusable" problem (closes #1110)
	* ADD : names rendering in styles
	* ADD : save last download layer to MDCs
	* ADD : switch to integer internal coordinates. Coordinates now vary from -INT_MAX to +INT_MAX rather than -M_PI / +M_PI
	* FIX : 412 when uploading joined/splitted roads
	* ADD : layer menu in menubar
	* ADD : display viewport coordinates in status bar
	* ADD : (almost) generalize progress dialogs
	* ADD : support (initial) of GPS devices / NMEA log replay
	* ADD : option to show/hide track segments
	* ADD : option to show/hide non-stylized trackpoints
	* ADD : option to show/hide street names on the map
	* ADD : Render to bitmap via native engine.
	* ADD : Render to SVG via Osmarender (requires libxml2/libxslt; inkscape required to generate bitmap). Closes #694
v0.11
	* ADD : Export to KML
	* ADD : Export to GPX + proper waypoint saving in MDC documents
	* ADD : Shift-Right button to drag-zoom
	* FIX : Qt slows to a crawl when drawing lines offscreen to a large virtual canvas, clipping enabled or not (Qt bug?). Try to optimize roads/track segments drawing to cope with this.